# bachelor

./: .gitignore  pyproject.toml
data/graphs/: graph2c.txt  graph3c.txt  graph4c.txt  graph5c.txt  graph6c.txt  graph7c.txt  graph8c.txt
data/graphs_info/: graph3_info.csv  graph4_info.csv  graph5_info.csv  graph6_info.csv  graph7_info.csv  graph8_info.csv
data/graphs_results/: graph3c.csv  graph4c.csv  graph5c.csv  graph6c.csv  graph7c.csv  graph8c.csv  part_(1-513)graph8c.csv
data/graphs_rudy/: graph_100.txt  graph_15.txt  graph_20.txt  graph_30.txt  graph_50.txt  graph_700.txt  graph_800.txt
src/: config.py  main.py
src/notebooks/: compare_algorithms.ipynb
src/quantumoptimization/: imports.py
src/quantumoptimization/algorithms/: classical_algs.py  compare.py  helpers.py  quantum_algs.py
src/scripts/: load_graphdata.py  save_graphdata.py  solve.py
